<resources>
    <string name="app_name">Armatour</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="nav_home">Home</string>
    <string name="nav_guide">Guide</string>
    <string name="nav_map">Map</string>
    <string name="nav_search">Search</string>
    <string name="nav_settings">Settings</string>

    <string name="bottom_menu_places">Places</string>
    <string name="bottom_menu_tours">Tours</string>
    <string name="bottom_menu_motels">Motels</string>
    <string name="bottom_menu_guide">Guide</string>

    <string name="slogan">Explore Armenia</string>
    <string name="guide_dialog_header">Choose Place</string>
    <string name="nav_tour_companies">Tour Companies</string>
</resources>
