<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/nav_home"
        android:icon="@drawable/ic_menu_camera"
        android:title="@string/nav_home" />
    <item
        android:id="@+id/nav_tour_companies"
        android:icon="@drawable/ic_menu_camera"
        android:title="@string/nav_tour_companies" />
    <item
        android:id="@+id/nav_guide"
        android:icon="@drawable/ic_menu_gallery"
        android:title="@string/nav_guide" />
    <item
        android:id="@+id/nav_map"
        android:icon="@drawable/ic_menu_slideshow"
        android:title="@string/nav_map" />
    <item
        android:id="@+id/nav_search"
        android:icon="@drawable/ic_menu_manage"
        android:title="@string/nav_search" />
    <item
        android:id="@+id/nav_settings"
        android:icon="@drawable/ic_menu_manage"
        android:title="@string/nav_settings" />

</menu>
